--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,9 @@
 <body>
   <h1> Weather Data API </h1>
   <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
+  <p>URL example: http://127.0.0.1:5000/api/v1/10/1998-10-25</p>
+  <p>Date Format = yyyy-mm-dd </p>
+
 
 </body>
 </html>
