Added url endpoints for yearly station data and single station data

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,9 @@
 <body>
   <h1> Weather Data API </h1>
   <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
-  <p>URL example: http://127.0.0.1:5000/api/v1/10/1998-10-25</p>
+  <p>URL example for One Day: http://127.0.0.1:5000/api/v1/10/1998-10-25</p>
+  <p>URL example for One Station, all dates: http://127.0.0.1:5000/api/v1/10/1998-10-25</p>
+  <p>URL example for One Year: http://127.0.0.1:5000/api/v1/yearly/10/1998</p>
   <p>Date Format = yyyy-mm-dd </p>
   <p>{{station_data|safe}}</p>
 
